--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -30,10 +30,13 @@ margin: 10px;
 }
 
 .sidebar__input>input{
+    flex: 1;
     border: none;
     background-color: transparent;
     outline-width: 0;
 }
+
+
 
 .sidebar__chat{
     overflow: scroll;
