--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -22,3 +22,21 @@
     bottom: -5px;
     font-size: 8px;
 }
+
+.message__sender{
+    margin-left: auto;
+}
+
+.message__sender>.message__photo{
+    order: 1;
+    margin: 15px;
+}
+
+.message__photo{
+    order: 0;
+}
+
+.message__sender>p{
+    background-color: rgba(40, 40, 199, 0.705);
+    color: white;
+}
